sidecar-envoy/deployment/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-sidecar-server-v0
  labels:
    app: hello-sidecar-server
    sidecar.istio.io/inject: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-sidecar-server
  template:
    metadata:
      labels:
        app: hello-sidecar-server
        version: "0"
    spec:
      serviceAccountName: server-user
      containers:
      - name: hello-sidecar-server
        ports:
          - protocol: TCP
            containerPort: 50051
        image: kaixin-registry:5001/hello-sidecar-server:v1.0
        resources:
          limits:
            cpu: "200m"
            memory: "250Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        readinessProbe:
          exec:
            command: [ "/bin/grpc_health_probe", "-addr=:50051", "-rpc-timeout=4s" ]
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ "/bin/grpc_health_probe", "-addr=:50051", "-rpc-timeout=4s" ]
          initialDelaySeconds: 10
          timeoutSeconds: 5
