sidecar-envoy/deployment/server/deployment_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-sidecar-server-v1
  labels:
    app: hello-sidecar-server
    sidecar.istio.io/inject: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-sidecar-server
  template:
    metadata:
      labels:
        app: hello-sidecar-server
        version: "1"
    spec:
      serviceAccountName: server-user
      containers:
      - name: hello-sidecar-server
        ports:
          - protocol: TCP
            containerPort: 50051
        image: localhost:5001/hello-sidecar-server:latest
        resources:
          limits:
            cpu: "200m"
            memory: "250Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        readinessProbe:
          exec:
            command: [ "/bin/grpc_health_probe", "-addr=:50051", "-rpc-timeout=4s" ]
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ "/bin/grpc_health_probe", "-addr=:50051", "-rpc-timeout=4s" ]
          timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: hello-sidecar-backend
spec:
  selector:
    app: hello-sidecar-server
  ports:
    - port: 5005
      name: grpc-hello-sidecar-backend
      protocol: TCP
      targetPort: 50051
