sidecar-envoy/deployment/server/k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-sidecar-backend
spec:
  selector:
    app: hello-sidecar-server
  ports:
    - port: 5005
      name: grpc-hello-sidecar-backend
      protocol: TCP
      targetPort: 50051
